# ECE-Siam

./: .gitignore  CMakeLists.txt  README.md  Siam.cbp  Siam.depend  elephant.h  entity.cpp  entity.h  gitignore.txt  logoSiam.txt  main.cpp  matrix.cpp  matrix.h  matrix.txt  mountain.cpp  mountain.h  moutain.h  object.cpp  object.h  player.cpp  player.h  rhinoceros.h  winhack.h
allegro/: bitmap_not_loaded  circularmenu.cpp  circularmenu.hpp  invalid_configuration  popup.cpp  popup.hpp
cli/: cli.cpp  cli.hpp  main  main.cpp  test.cpp
cli/menu/: menu.cpp  menu.hpp
cmake/: FindALLEGRO4.cmake  FindDUI.cmake  FindFBlend.cmake  FindFMOD.cmake
images/menu/: logo.xcf  menu0.xcf  menu1.xcf  menu2.xcf  menu3.xcf  menu4.xcf  menuCol.xcf
inc/exceptions/: exceptions.hpp  invalid_move
inc/matrix/: direction.hpp
lib/dui/inc/: dui.h
lib/dui/inc/dui/: dialog.h  editor.h  xmlparser.h
siam/: game.cpp  matrix.cpp  object.cpp  player.cpp
siam/inc/: game.hpp  matrix.hpp  object.hpp  player.hpp
siam/inc/exceptions/: cancel_action  exceptions.hpp  invalid_move  invalid_object  invalid_object_type  stack_empty  stack_full
siam/inc/matrixs/: direction.hpp
siam/inc/objects/: elephant.hpp  entity.hpp  mountain.hpp  rhinoceros.hpp
siam/inc/objects/types/: type.hpp
siam/inc/ui/: UIgame.hpp  game.hpp  gameui.hpp
siam/inc/ui/audio/: FMOD.hpp
siam/inc/ui/games/: CLI.hpp  CLIbis.hpp  gameallegroui.hpp  gamecliui.hpp
siam/inc/ui/main/: mainallegroui.hpp  maincliui.hpp
siam/matrixs/: direction.cpp
siam/objects/: elephant.cpp  entity.cpp  mountain.cpp  rhinoceros.cpp
siam/ui/audio/: FMOD.cpp
siam/ui/games/: CLI.cpp  CLIbis.cpp  gameallegroui.cpp  gamecliui.cpp
siam/ui/main/: mainallegroui.cpp  maincliui.cpp
texts/: siam.txt  victory.txt
ui/: selectPlayers.dui
